refactor(agents): consolidate agent system with deprecations and TDD hook
- Deprecate legacy agents (Oracle, Metis, Momus, Prometheus) with @deprecated JSDoc
- Update all references: Oracle→Elijah, Metis→Nathan, Momus→Ezra
- Rename orchestrator-sisyphus.ts to paul.ts for clarity
- Create TDD enforcement hook (soft reminders for test specs)
- Add .paul/plans/ for implementation plans
- Rename project assets to oh-my-lord-opencode

--- a/packages/linux-x64/package.json
+++ b/packages/linux-x64/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "oh-my-opencode-linux-x64",
+  "name": "oh-my-lord-opencode-linux-x64",
   "version": "3.0.0-beta.8",
-  "description": "Platform-specific binary for oh-my-opencode (linux-x64)",
+  "description": "Platform-specific binary for oh-my-lord-opencode (linux-x64)",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -12,6 +12,6 @@
   "libc": ["glibc"],
   "files": ["bin"],
   "bin": {
-    "oh-my-opencode": "./bin/oh-my-opencode"
+    "oh-my-lord-opencode": "./bin/oh-my-lord-opencode"
   }
 }
