--- a/packages/windows-x64/package.json
+++ b/packages/windows-x64/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "oh-my-opencode-windows-x64",
+  "name": "oh-my-lord-opencode-windows-x64",
   "version": "3.0.0-beta.8",
-  "description": "Platform-specific binary for oh-my-opencode (windows-x64)",
+  "description": "Platform-specific binary for oh-my-lord-opencode (windows-x64)",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -11,6 +11,6 @@
   "cpu": ["x64"],
   "files": ["bin"],
   "bin": {
-    "oh-my-opencode": "./bin/oh-my-opencode.exe"
+    "oh-my-lord-opencode": "./bin/oh-my-lord-opencode.exe"
   }
 }
