--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "oh-my-opencode",
+  "name": "oh-my-lord-opencode",
   "version": "3.0.0-beta.8",
   "description": "The Best AI Agent Harness - Batteries-Included OpenCode Plugin with Multi-Model Orchestration, Parallel Background Agents, and Crafted LSP/AST Tools",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "bin": {
-    "oh-my-opencode": "./bin/oh-my-opencode.js"
+    "oh-my-lord-opencode": "./bin/oh-my-lord-opencode.js"
   },
   "files": [
     "dist",
@@ -18,7 +18,7 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
-    "./schema.json": "./dist/oh-my-opencode.schema.json"
+    "./schema.json": "./dist/oh-my-lord-opencode.schema.json"
   },
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --target bun --format esm --external @ast-grep/napi && tsc --emitDeclarationOnly && bun build src/cli/index.ts --outdir dist/cli --target bun --format esm --external @ast-grep/napi && bun run build:schema",
@@ -77,13 +77,13 @@
     "typescript": "^5.7.3"
   },
   "optionalDependencies": {
-    "oh-my-opencode-darwin-arm64": "3.0.0-beta.8",
-    "oh-my-opencode-darwin-x64": "3.0.0-beta.8",
-    "oh-my-opencode-linux-arm64": "3.0.0-beta.8",
-    "oh-my-opencode-linux-arm64-musl": "3.0.0-beta.8",
-    "oh-my-opencode-linux-x64": "3.0.0-beta.8",
-    "oh-my-opencode-linux-x64-musl": "3.0.0-beta.8",
-    "oh-my-opencode-windows-x64": "3.0.0-beta.8"
+    "oh-my-lord-opencode-darwin-arm64": "3.0.0-beta.8",
+    "oh-my-lord-opencode-darwin-x64": "3.0.0-beta.8",
+    "oh-my-lord-opencode-linux-arm64": "3.0.0-beta.8",
+    "oh-my-lord-opencode-linux-arm64-musl": "3.0.0-beta.8",
+    "oh-my-lord-opencode-linux-x64": "3.0.0-beta.8",
+    "oh-my-lord-opencode-linux-x64-musl": "3.0.0-beta.8",
+    "oh-my-lord-opencode-windows-x64": "3.0.0-beta.8"
   },
   "trustedDependencies": [
     "@ast-grep/cli",
