feat(paul): Reduce token consumption by ~66% with lazy loading and summarization
Token Optimization Changes:
- Compress Paul's system prompt from ~200 to ~50 lines of terse rules
- Lazy-load AGENTS.md/README.md only on direct read (not auto-inject)
- Add output_format parameter to delegate_task (summary/full)
- Summarize skill content to ~300 tokens before injection
- Add plan-summary-injector hook for Paul's plan reads
- Cache getPlanProgress() with mtime-based invalidation

Expected Impact:
- Paul base prompt: 2,500-3,000 → ~1,500 tokens
- Context injection: 6,500/file → ~500/file
- Delegation output: 2,000-5,000 → ~300 tokens
- Skill loading: 500-2,000 → ~300 tokens
- Plan loading: 2,500-6,000 → ~500 tokens
- Total per task: ~35,500 → ~10,000-12,000 tokens

Also includes:
- Fix model expectations in nathan.test.ts, elijah.test.ts
- Fix config filename in opencode-config-dir.test.ts
- Delete deprecated prometheus-prompt.test.ts
- Add EXEC:: todo filtering for planner-paul
- Add loop detection and incident logging to todo-continuation
- Improve hierarchy-enforcer with category validation

--- a/docs/agent-architecture.yaml
+++ b/docs/agent-architecture.yaml
@@ -212,7 +212,7 @@ hierarchy:
         writes_code: true (tests only)
         test_type: unit
         status: created
-        model: anthropic/claude-sonnet-4-5
+        model: openai/gpt-5.2
         inputs:
           - Unit test specs from Solomon's plan
         outputs:
@@ -1007,7 +1007,7 @@ config:
     
     # Planners
     planner-paul: "anthropic/claude-opus-4-5"
-    Solomon (TDD Planner): "anthropic/claude-opus-4-5"
+    Solomon (TDD Planner): "openai/gpt-5.2-codex-high"
     
     # Plan Consultants & Reviewers
     Thomas (TDD Plan Consultant): "anthropic/claude-sonnet-4-5"
@@ -1015,9 +1015,9 @@ config:
     Momus (Plan Reviewer): "anthropic/claude-sonnet-4-5"
     
     # Test Writers & Runner
-    Peter (Test Writer): "anthropic/claude-sonnet-4-5"
-    John (E2E Test Writer): "anthropic/claude-sonnet-4-5"
-    Joshua (Test Runner): "anthropic/claude-sonnet-4-5"
+    Peter (Test Writer): "openai/gpt-5.2-codex-high"
+    John (E2E Test Writer): "openai/gpt-5.2-codex-high"
+    Joshua (Test Runner): "openai/gpt-5.2"
     
     # Specialists
     oracle: "openai/gpt-5.2"
