--- a/docs/agent-architecture.yaml
+++ b/docs/agent-architecture.yaml
@@ -1007,7 +1007,7 @@ config:
     
     # Planners
     planner-paul: "anthropic/claude-opus-4-5"
-    Solomon (TDD Planner): "openai/gpt-5.2-codex-high"
+    Solomon (TDD Planner): "openai/gpt-5.2-codex"
     
     # Plan Consultants & Reviewers
     Thomas (TDD Plan Consultant): "anthropic/claude-sonnet-4-5"
@@ -1015,8 +1015,8 @@ config:
     Momus (Plan Reviewer): "anthropic/claude-sonnet-4-5"
     
     # Test Writers & Runner
-    Peter (Test Writer): "openai/gpt-5.2-codex-high"
-    John (E2E Test Writer): "openai/gpt-5.2-codex-high"
+    Peter (Test Writer): "openai/gpt-5.2-codex"
+    John (E2E Test Writer): "openai/gpt-5.2-codex"
     Joshua (Test Runner): "openai/gpt-5.2"
     
     # Specialists
