--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,12 +1,12 @@
 name: Feature Request
-description: Suggest a new feature or enhancement for oh-my-opencode
+description: Suggest a new feature or enhancement for oh-my-lord-opencode
 title: "[Feature]: "
 labels: ["enhancement", "needs-triage"]
 body:
   - type: markdown
     attributes:
       value: |
-        **Please write your issue in English.** See our [Language Policy](https://github.com/code-yeongyu/oh-my-opencode/blob/dev/CONTRIBUTING.md#language-policy) for details.
+        **Please write your issue in English.** See our [Language Policy](https://github.com/jaino-song/oh-my-lord-opencode/blob/dev/CONTRIBUTING.md#language-policy) for details.
 
   - type: checkboxes
     id: prerequisites
@@ -16,9 +16,9 @@ body:
       options:
         - label: I have searched existing issues and discussions to avoid duplicates
           required: true
-        - label: This feature request is specific to oh-my-opencode (not OpenCode core)
+        - label: This feature request is specific to oh-my-lord-opencode (not OpenCode core)
           required: true
-        - label: I have read the [documentation](https://github.com/code-yeongyu/oh-my-opencode#readme)
+        - label: I have read the [documentation](https://github.com/jaino-song/oh-my-lord-opencode#readme)
           required: true
 
   - type: textarea
@@ -57,10 +57,10 @@ body:
     attributes:
       label: Doctor Output (Optional)
       description: |
-        If relevant to your feature request, run `bunx oh-my-opencode doctor` and paste the output.
+        If relevant to your feature request, run `bunx oh-my-lord-opencode doctor` and paste the output.
         This helps us understand your environment.
       placeholder: |
-        Paste the output of: bunx oh-my-opencode doctor
+        Paste the output of: bunx oh-my-lord-opencode doctor
         (Optional for feature requests)
       render: shell
 
