--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,15 +75,15 @@ jobs:
       - name: Auto-commit schema changes
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
-          if git diff --quiet assets/oh-my-opencode.schema.json; then
-            echo "No schema changes to commit"
-          else
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add assets/oh-my-opencode.schema.json
-            git commit -m "chore: auto-update schema.json"
-            git push
-          fi
+          if git diff --quiet assets/oh-my-lord-opencode.schema.json; then
+             echo "No schema changes to commit"
+           else
+             git config user.name "github-actions[bot]"
+             git config user.email "github-actions[bot]@users.noreply.github.com"
+             git add assets/oh-my-lord-opencode.schema.json
+             git commit -m "chore: auto-update schema.json"
+             git push
+           fi
 
   draft-release:
     runs-on: ubuntu-latest
