--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,7 +62,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: [test, typecheck]
-    if: github.repository == 'code-yeongyu/oh-my-opencode'
+    if: github.repository == 'jaino-song/oh-my-lord-opencode'
     steps:
       - uses: actions/checkout@v4
         with:
@@ -126,12 +126,12 @@ jobs:
           test -f dist/index.js || (echo "ERROR: dist/index.js not found!" && exit 1)
           test -f dist/cli/index.js || (echo "ERROR: dist/cli/index.js not found!" && exit 1)
           echo "=== Platform binaries ==="
-          for platform in darwin-arm64 darwin-x64 linux-x64 linux-arm64 linux-x64-musl linux-arm64-musl; do
-            test -f "packages/${platform}/bin/oh-my-opencode" || (echo "ERROR: packages/${platform}/bin/oh-my-opencode not found!" && exit 1)
-            echo "✓ packages/${platform}/bin/oh-my-opencode"
-          done
-          test -f "packages/windows-x64/bin/oh-my-opencode.exe" || (echo "ERROR: packages/windows-x64/bin/oh-my-opencode.exe not found!" && exit 1)
-          echo "✓ packages/windows-x64/bin/oh-my-opencode.exe"
+           for platform in darwin-arm64 darwin-x64 linux-x64 linux-arm64 linux-x64-musl linux-arm64-musl; do
+             test -f "packages/${platform}/bin/oh-my-lord-opencode" || (echo "ERROR: packages/${platform}/bin/oh-my-lord-opencode not found!" && exit 1)
+             echo "✓ packages/${platform}/bin/oh-my-lord-opencode"
+           done
+           test -f "packages/windows-x64/bin/oh-my-lord-opencode.exe" || (echo "ERROR: packages/windows-x64/bin/oh-my-lord-opencode.exe not found!" && exit 1)
+           echo "✓ packages/windows-x64/bin/oh-my-lord-opencode.exe"
 
       - name: Publish
         run: bun run script/publish.ts
