--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Dependencies
-.sisyphus/
+.paul/
 node_modules/
 
 # Build output
 dist/
 
 # Platform binaries (built, not committed)
-packages/*/bin/oh-my-opencode
-packages/*/bin/oh-my-opencode.exe
+packages/*/bin/oh-my-lord-opencode
+packages/*/bin/oh-my-lord-opencode.exe
 
 # IDE
 .idea/
