--- a/packages/darwin-arm64/package.json
+++ b/packages/darwin-arm64/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "oh-my-opencode-darwin-arm64",
+  "name": "oh-my-lord-opencode-darwin-arm64",
   "version": "3.0.0-beta.8",
-  "description": "Platform-specific binary for oh-my-opencode (darwin-arm64)",
+  "description": "Platform-specific binary for oh-my-lord-opencode (darwin-arm64)",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/code-yeongyu/oh-my-opencode"
+    "url": "https://github.com/jaino-song/oh-my-lord-opencode"
   },
   "os": ["darwin"],
   "cpu": ["arm64"],
   "files": ["bin"],
   "bin": {
-    "oh-my-opencode": "./bin/oh-my-opencode"
+    "oh-my-lord-opencode": "./bin/oh-my-lord-opencode"
   }
 }
