--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oh-my-lord-opencode",
-  "version": "3.0.0-beta.8",
+  "version": "0.11.2",
   "description": "The Best AI Agent Harness - Batteries-Included OpenCode Plugin with Multi-Model Orchestration, Parallel Background Agents, and Crafted LSP/AST Tools",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -77,13 +77,13 @@
     "typescript": "^5.7.3"
   },
   "optionalDependencies": {
-    "oh-my-lord-opencode-darwin-arm64": "3.0.0-beta.8",
-    "oh-my-lord-opencode-darwin-x64": "3.0.0-beta.8",
-    "oh-my-lord-opencode-linux-arm64": "3.0.0-beta.8",
-    "oh-my-lord-opencode-linux-arm64-musl": "3.0.0-beta.8",
-    "oh-my-lord-opencode-linux-x64": "3.0.0-beta.8",
-    "oh-my-lord-opencode-linux-x64-musl": "3.0.0-beta.8",
-    "oh-my-lord-opencode-windows-x64": "3.0.0-beta.8"
+    "oh-my-lord-opencode-darwin-arm64": "0.11.2",
+    "oh-my-lord-opencode-darwin-x64": "0.11.2",
+    "oh-my-lord-opencode-linux-arm64": "0.11.2",
+    "oh-my-lord-opencode-linux-arm64-musl": "0.11.2",
+    "oh-my-lord-opencode-linux-x64": "0.11.2",
+    "oh-my-lord-opencode-linux-x64-musl": "0.11.2",
+    "oh-my-lord-opencode-windows-x64": "0.11.2"
   },
   "trustedDependencies": [
     "@ast-grep/cli",
