feat: add NPM_TOKEN support for manual npm auth
- Add NPM_TOKEN env var to publish workflow step
- Update publish.ts to configure npm auth token when NPM_TOKEN is set
- This allows fallback when OIDC fails or for manual token auth

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -139,6 +139,7 @@ jobs:
           BUMP: ${{ inputs.bump }}
           VERSION: ${{ inputs.version }}
           CI: true
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
           SKIP_PLATFORM_PACKAGES: true
 
