--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -133,25 +133,16 @@ jobs:
            test -f "packages/windows-x64/bin/oh-my-lord-opencode.exe" || (echo "ERROR: packages/windows-x64/bin/oh-my-lord-opencode.exe not found!" && exit 1)
            echo "✓ packages/windows-x64/bin/oh-my-lord-opencode.exe"
 
-      - name: Build main package
-        run: |
-          echo "=== Running bun build (main) ==="
-          bun build src/index.ts --outdir dist --target bun --format esm --external @ast-grep/napi
-          echo "=== Running bun build (CLI) ==="
-          bun build src/cli/index.ts --outdir dist/cli --target bun --format esm --external @ast-grep/napi
-          echo "=== Running tsc ==="
-          bunx tsc --emitDeclarationOnly
-          echo "=== Running build:schema ==="
-          bun run build:schema
-
       - name: Publish
-        run: bun run script/publish.ts
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+          bun run script/publish.ts
         env:
           BUMP: ${{ inputs.bump }}
           VERSION: ${{ inputs.version }}
           CI: true
-          NPM_CONFIG_PROVENANCE: true
           SKIP_PLATFORM_PACKAGES: true
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Delete draft release
         run: gh release delete next --yes 2>/dev/null || echo "No draft release to delete"
