fix: allow camelCase/PascalCase for frontend files in strict-workflow hook
- Added frontend file detection (React hooks, components, directories)
- Fixed question tool documentation across all agents (description field)
- Updated worker-paul example with correct question tool structure

--- a/.paul/approval_state.json
+++ b/.paul/approval_state.json
@@ -5,6 +5,18 @@
       "approver": "joshua",
       "timestamp": 1769353851000,
       "status": "approved"
+    },
+    {
+      "taskId": "toolu_01UEHJWXMa9bgUFeKTKqvMt1",
+      "approver": "\"Sisyphus\" }`",
+      "timestamp": 1769566054954,
+      "status": "approved"
+    },
+    {
+      "taskId": "toolu_01V3fDapZSjtAcLrihaWPkTZ",
+      "approver": "todoCurrentAgent` - shows which agent completed the task",
+      "timestamp": 1769567657126,
+      "status": "approved"
     }
   ]
 }
