feat(elijah): integrate Elijah as mandatory planning-phase reviewer
- Add Elijah to planner-paul's allowed agents in hierarchy-enforcer
- Increase background task output timeout from 60s to 180s for longer reviews
- Record Thomas approval for review chain changes

This enables Elijah's mandatory review in the planning phase before Ezra's quality review.

--- a/.paul/approval_state.json
+++ b/.paul/approval_state.json
@@ -17,6 +17,12 @@
       "approver": "todoCurrentAgent` - shows which agent completed the task",
       "timestamp": 1769567657126,
       "status": "approved"
+    },
+    {
+      "taskId": "toolu_016HEkaJKmVY657YWsAeWTcp",
+      "approver": "Thomas",
+      "timestamp": 1770388554888,
+      "status": "approved"
     }
   ]
 }
