feat: make Elijah mandatory in planner-paul review chain with --plan-review and --verify-plan modes
Elijah now runs before Ezra in every code-implementation plan review (security/perf/arch checklists) and after Joshua in post-implementation verification. Review chain: Elijah → Ezra → Solomon → Thomas.

- Add --plan-review mode: 35-item OWASP security, performance, architecture checklists
- Add --verify-plan mode: post-implementation verification with Planning Concerns Resolution
- Update planner-paul workflow to invoke Elijah as Step 1 in Phase 3
- Update Paul verification to run --verify-plan after tests pass
- Remove Elijah escalation triggers from Ezra (no longer needed)
- Update 10 documentation files to reflect new review chain

--- a/.paul/approval_state.json
+++ b/.paul/approval_state.json
@@ -23,6 +23,24 @@
       "approver": "Thomas",
       "timestamp": 1770388554888,
       "status": "approved"
+    },
+    {
+      "taskId": "toolu_017zSy6srNGxGmLyegpspdhf",
+      "approver": "Thomas",
+      "timestamp": 1770391368461,
+      "status": "approved"
+    },
+    {
+      "taskId": "toolu_015P2JSyuFGx1AUaNrXXJgCx",
+      "approver": "Joshua",
+      "timestamp": 1770470018897,
+      "status": "approved"
+    },
+    {
+      "taskId": "toolu_01LBPxysv2rZqZswCvSbfCV2",
+      "approver": "Joshua",
+      "timestamp": 1770470024808,
+      "status": "approved"
     }
   ]
 }
