--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "postinstall": "node postinstall.mjs",
     "prepublishOnly": "bun run clean && bun run build",
     "typecheck": "tsc --noEmit",
-    "test": "bun test"
+    "test": "bun test",
+    "test:contracts-v1": "bun test src/contracts-v1-lint.test.ts"
   },
   "keywords": [
     "opencode",
@@ -55,13 +56,13 @@
     "@ast-grep/napi": "^0.40.0",
     "@clack/prompts": "^0.11.0",
     "@code-yeongyu/comment-checker": "^0.6.1",
-    "@modelcontextprotocol/sdk": "^1.25.1",
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "@openauthjs/openauth": "^0.4.3",
     "@opencode-ai/plugin": "^1.1.19",
     "@opencode-ai/sdk": "^1.1.19",
     "commander": "^14.0.2",
     "detect-libc": "^2.0.0",
-    "hono": "^4.10.4",
+    "hono": "^4.11.9",
     "js-yaml": "^4.1.1",
     "jsonc-parser": "^3.3.1",
     "open": "^11.0.0",
@@ -84,6 +85,10 @@
     "oh-my-lord-opencode-linux-x64": "0.11.2",
     "oh-my-lord-opencode-linux-x64-musl": "0.11.2",
     "oh-my-lord-opencode-windows-x64": "0.11.2"
+  },
+  "overrides": {
+    "ajv": "8.18.0",
+    "qs": "6.15.0"
   },
   "trustedDependencies": [
     "@ast-grep/cli",
